--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -151,9 +151,11 @@ coronavirus:
         url: /coronavirus/multiseq
       - title: "Analysis of structural protein differences<br><br>"
         url: /coronavirus/structural_differences
-      - title: "Quantification of protein interaction energy<br><br>"
-        url: /coronavirus/interaction_energy
-      - title: "Part 2 conclusion: from static protein analysis to molecular dynamics<br><br>"
+      - title: "From static protein analysis to molecular dynamics<br><br>"
+        url: /coronavirus/gnm
+      - title: "Anisotropic network models<br><br>"
+        url: /coronavirus/anm
+      - title: "Part 2 conclusion: bamboo shoots after the rain<br><br>"
         url: /coronavirus/conclusion_part_2
   - title: Software Tutorials (featuring ProDy)
     children:
@@ -179,6 +181,8 @@ coronavirus:
     children:
       - title: "Coronavirus part 1 exercises"
         url: /coronavirus/exercises_part_1
+      - title: "Coronavirus part 2 exercises"
+        url: /coronavirus/exercises_part_2
 
 white_blood_cells:
   - title: "Training a Computer to Classify White Blood Cells"
