add link to book

--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ author:
     - label: "Personal website"
       icon: "fas fa-fw fa-link"
       url: "http://compeau.cbd.cmu.edu"
-    - label: "Buy me a coffee"
-      icon: "fas fa-fw fa-coffee"
-      url: "https://www.buymeacoffee.com/PhillipCompeau"
+    - label: "Get the book"
+      icon: "fas fa-fw fa-book"
+      url: "https://www.amazon.com/Biological-Modeling-Short-Phillip-Compeau/dp/B0BT6B2B8W"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/phillipcompeau"
