--- a/_config.yml
+++ b/_config.yml
@@ -32,21 +32,16 @@ author:
   avatar: "/assets/images/600px/compeau_phillip_2023.jpg"
   bio: "Online education founder. Proud to have built *Biological Modeling* with my students." # Note: Markdown is allowed
   links:
-    - label: "Get the print book"
-      icon: "fas fa-fw fa-book"
-      url: "https://www.amazon.com/Biological-Modeling-Short-Phillip-Compeau/dp/B0BT6B2B8W"
-    - label: "Get the E-book"
-      icon: "fas fa-fw fa-tablet"
-      url: "https://leanpub.com/biologicalmodeling"
-    - label: "Personal website"
+    - label: "Follow me on LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://linkedin.com/in/phillipcompeau/"
+    - label: "Lots more education resources on my website"
       icon: "fas fa-fw fa-link"
       url: "http://compeau.cbd.cmu.edu"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/phillipcompeau"
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin"
-      url: "https://linkedin.com/in/phillipcompeau/"
+      url: "https://x.com/phillipcompeau"
+
 
 # Search
 search: true
