Final adjustments to site, including removing buttons from some pages

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
     - label: "Follow me on LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/phillipcompeau/"
-    - label: "Lots more education resources on my website"
+    - label: "More cool stuff on my website"
       icon: "fas fa-fw fa-link"
       url: "http://compeau.cbd.cmu.edu"
     - label: "Twitter"
