Remove Buy the book from ToC and Remove Disqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -47,11 +47,13 @@ author:
 search: true
 search_provider: algolia
 
+
 # Allow comments
-comments:
-  provider: "disqus"
-  disqus:
-    shortname: "biological-modeling"
+# comments:
+#  provider: "disqus"
+#  disqus:
+#    shortname: "biological-modeling"
+
 
 # Build settings
 markdown: kramdown
