Excluding large image files

--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,9 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 include:
   - _pages
 
+exclude:
+  - _pages/assets/images_CMYK
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
