Change exclude tag

--- a/_config.yml
+++ b/_config.yml
@@ -62,9 +62,9 @@ include:
   - _pages
 
 exclude:
-  - /assets/images_CMYK
-  - /assets/old
-  - /assets/tex
+  - assets/images_CMYK
+  - assets/old
+  - assets/tex
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
