Making improvements to header.

--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,10 @@ search_provider: algolia
 #  disqus:
 #    shortname: "biological-modeling"
 
+# include header
+head:
+  custom_includes:
+    - head.html
 
 # Build settings
 markdown: kramdown
