--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ url: "https://biologicalmodeling.org"
 email:
 locale: "en-US"
 description: >- # this means to ignore newlines until "baseurl:"
-  A free and open online course in biological modeling at multiple scales.
+  A free and open online course.
 twitter_username: phillipcompeau
 github_username: phcompeau
 minimal_mistakes_skin: contrast
