--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "Biological Modeling"
-subtitle: "A Free Course in Computational Biology"
+subtitle: "A Free Online Course in Computational Biology"
 masthead_title: "<em>Biological Modeling</em>" # combine title and subtitle in masthead
 logo: "/assets/images/200px/gray_scott_jupyter_high-res.png"
 url: "https://biologicalmodeling.org"
